--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task2",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://hussam633hasan.github.io/Task2/",
+  "homepage": "https://hussam633hasan.github.io/Task2",
   "type": "module",
   "scripts": {
     "predeploy" : "npm run build",
